0.08 2022-06-30
  [Test Fix]
    * Fix testing bug that occur upgrading to SPVM 0.9630.
  [Improve Exception Messages]
    * Improve IO::FileHandle exception messages.
  [Incompatible Changes]
    * Remove undocumented Fn->unlink method
0.07 2022-06-30
  [New Features]
    * Add SPVM::IO::Handle module
    * Add SPVM::IO::Socket module
    * Add SPVM::IO::Socket::Fn module
    * SPVM::IO::Socket::INET extends SPVM::IO::Socket
  [Bug Fix]
    * Fix the bug that SPVM::IO don't work on Windows.
    * Fix broken tests.
  [Changes]
    * SPVM::IO::Socket extends SPVM::IO::Handle
    * SPVM::File extends SPVM::IO::File
    * Need SPVM 0.9614
  [Incompatible Changes]
    * Removed SPVM::IO::Handlable
    * Removed SPVM::IO::Socketable

0.06  2022-06-22
  * Catch up with SPVM 0.96
0.05  2022-06-20
  * Catch up with SPVM 0.9609
0.04  2022-06-14
  [CHANGES]
  * Fix tests
  * Add IO::Handlable class.
  * Rename IO::Socket to IO::Socketable
  * IO::File has IO::Handlable interface.
  * IO::Socket::INET has IO::Handlable interface.

0.03  2022-06-13
  [CHANGES]
  * Catch up with latest SPVM.
        
0.02  2022-05-26
  [CHANGES]
  * Catch up with latest SPVM.

0.01  2022-05-23
  [CHANGES]
  * First development release